<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="swiftp_name">Project Droid</string>

    <string name="running_label">Project Droid</string>
    <string name="running_summary_stopped">Change the state of the ftp server</string>
    <string name="running_summary_started">at %s</string>
    <string name="running_summary_failed">
        Failed to start the FTP server, not connected to the local network (wifi or ethernet)?
    </string>
    <string name="running_summary_failed_to_get_ip_address">
        Failed to start the FTP server, unable to get IP address
    </string>


    <string name="settings_label">Settings</string>
    <string name="user_label">User</string>
    <string name="login_settings_label">Login settings</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="show_password_label">Display password</string>
    <string name="username_validation_error">
        The password must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="password_validation_error">
        The password must consist of 1 or more alphanumeric characters.
        No other characters are allowed.
    </string>
    <string name="anonymous_label">Anonymous</string>
    <string name="allow_anonymous_label">Allow anonymous login</string>
    <string name="anonymous_summary">Anonymous logins are only allowed read access</string>
    <string name="advanced_settings_label">Advanced settings</string>
    <string name="port_number_label">Port Number</string>
    <string name="port_validation_error">The port number must be in the range 1 to 65535.</string>
    <string name="chroot_label">Stay in folder</string>
    <string name="accept_wifi_label">Accept connection from wifi</string>
    <string name="wakelock_label">Keep device awake (full CPU speed)</string>
    <string name="extra_label">Extra</string>
    <string name="help_label">Help</string>
    <string name="about_label">About</string>
    <string name="help_dlg_title">Project Droid Help</string>
    <string name="help_dlg_message">Send us the feedback using the Send Feedback option at the top</string>

    <string name="notification_server_starting">Starting at %s</string>
    <string name="notification_title">Project Droid is running</string>
    <string name="notification_text">at %s</string>
    <string name="notification_stop_text">Stop server</string>

    <string name="nsd_servername_postfix">FTP Server</string>

    <string name="select">Select</string>
    <string name="cancel">Cancel</string>

    <string name="feedback">Send feedback</string>
    <string name="about">About</string>

    <string name="autoconnect_label">Autoconnect settings</string>
    <string name="autoconnect_summary">Select the wifi networks on which to autoconnect</string>
    <string name="autoconnect_error_enable_wifi_for_access_points">
        Enable wifi to get list of access points
    </string>




    <string name="storage_warning">
        Warning: storage is not available. You may want to unmount it.
    </string>


    <!-- auto added strings by AS -->
    <string name="widget_name">FTP Server Widget</string>
    <string name="notif_settings_text">Settings</string>
    <string name="app_copyright">Copyright 2016 - 2017</string>
    <string name="about_license_title">License</string>
    <string name="about_license_name">GNU GPL3</string>
    <string name="about_license_url" translatable="false">
        https://www.gnu.org/licenses/gpl-3.0.en.html
    </string>
    <string name="about_description_title">Description</string>
    <string name="about_description_text">
        Project Droid allows you to run an ftp server on your android device.
    </string>
    <string name="about_libraries_title">Libraries</string>
    <string name="about_contributor_title">Contributors</string>
    <string name="about_contributor_list" translatable="false">
        Rohit Kothavade, Gaurav Nale, Mansi Dabhole
    </string>

</resources>
